--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,13 @@ ul {
   body main .aboutUs--wrapper img {
     display: none;
   }
+  body main .side-scroll {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   body main .bestSeller--wrapper {
-    width: 85%;
     display: flex;
     flex-direction: column;
     row-gap: 3vh;
@@ -260,15 +265,22 @@ ul {
          column-gap: 0vh;
     padding-top: 5vh;
   }
+  body main .bestSeller--wrapper .side-scroll-list-wrapper {
+    position: relative;
+    width: 100%;
+    height: 300px;
+  }
   body main .bestSeller--wrapper .bestSeller--text {
     justify-content: flex-start;
   }
   body main .bestSeller--wrapper .bestSeller--img {
+    position: absolute;
     display: flex;
-    -moz-column-gap: 1vh;
-         column-gap: 1vh;
+    -moz-column-gap: 5vh;
+         column-gap: 5vh;
   }
   body main .bestSeller--wrapper .bestSeller--img figure {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     row-gap: 3vh;
