--- a/scss/devices/_mobile.scss
+++ b/scss/devices/_mobile.scss
@@ -225,20 +225,32 @@
           display: none;
         }
       }
-
+      .side-scroll {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      
       .bestSeller--wrapper {
-        width: 85%;
         @include disFlexC(column, 3vh, 0vh);
         padding-top: 5vh;
-
+        .side-scroll-list-wrapper{
+          position: relative;
+          width: 100%;
+          height: 300px;
+          
+        }
         .bestSeller--text {
           justify-content: flex-start;
         }
         .bestSeller--img {
+          position: absolute;
           display: flex;
-          column-gap: 1vh;
+          column-gap: 5vh;
           // justify-content: space-between;
           figure{
+            overflow-x: hidden;
             @include disFlexC(column, 3vh, 0vh);
             align-items: center;
             text-align: center;
@@ -255,6 +267,7 @@
             }
           }
         }
+        
         
       }
 
